# WxWidgetsCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
wxApp/: CMakeLists.txt  CMakeLists.txt.old  CMakeSettings.json
wxApp/include/: main.hpp
wxApp/src/: main.cpp
